==> zjcszn/embedded-lib/5. Tools/TinyJPEG/example/tjpgd_avr/disp.c <==
#include "disp.h"
#include "xitoa.h"
#include "uart.h"
#define POWER_LOW()		PORTD &= ~_BV(3)
#define POWER_HIGH()	PORTD |= _BV(3)
#define RES_LOW()	PORTD &= ~_BV(4)
#define RES_HIGH()	PORTD |= _BV(4)
#define CS_LOW()	PORTD &= ~_BV(5)
#define CS_HIGH()	PORTD |= _BV(5)
#define	CMD_WR(d)	send_cmd(d);	/* Write a command byte to the OLED */
#define	DATA_WRB(d)	send_data(d);	/* Write a data byte to the OLED */
#define	DATA_WPX(d)	{ send_data(d >> 8); send_data(d); }	/* Write a pixel to the OLED */

void disp_init (void)
{
	static const prog_uint8_t initdata[] = {	/* UG-2828GDEDF11 initialization data */
		1, 0xA4,		/* All OFF */
		2, 0xFD, 0x12,	/* Unlock command */
		2, 0xFD, 0xB1,	/* Unlock command */
		1, 0xAE,		/* Sleep mode ON */
		2, 0xB3, 0xE1,	/* Freeuqncy = 0xE, Divider = 0x1 */
		2, 0xCA, 0x7F,	/* Mux ratio = 127 */
		2, 0xA2, 0x00,	/* Display offset = 0 */
		2, 0xA1, 0x00,	/* Display start line = 0 */
		2, 0xA0, 0x74,	/* 65k color, COM split, Reverse scan, Color seq = C-B-A */
		2, 0xB5, 0x00,	/* GPIO0,1 disabled */
		2, 0xAB, 0x01,	/* Enable internal regurator */
		4, 0xB4, 0xA0, 0xB5, 0x55,	/* External VSL */
		4, 0xC1, 0xC8, 0x98, 0xC8,	/* Contrast for A, B, C */
		2, 0xC7, 0x0A,	/* Master contrast = 10 */
		64, 0xB8, 1, 2, 2, 3, 4, 4, 5, 6, 7, 9, 10, 11, 13, 14, 16, 18, 19, 21, 23, 25, 27, 30, 32, 34, 37, 39, 42, 44, 47, 50, 53, 56, 59, 62, 65, 68, 71, 75, 78, 82, 85, 89, 93, 96, 100, 104, 108, 112, 116, 121, 125, 129, 134, 138, 143, 147, 152, 156, 161, 166, 171, 176, 181,  /* Gamma 1.6 */
		2, 0xB1, 0x32,	/* OLED driving phase length */
		4, 0xB2, 0xA4, 0x00, 0x00,
		2, 0xBB, 0x17,	/* Pre-charge voltage */
		2, 0xB6, 0x01,	/* 2nd pre-charge period */
		2, 0xBE, 0x05,	/* COM deselect voltage */
		1, 0xA6,		/* Reset to normal display */
		0
	};
	int n;
	const prog_uint8_t *p;
	uint8_t cl, d;


	/* Reset OLED module */
	CS_HIGH();			/* CS# = H */
	RES_LOW();			/* RES# = L */
	for (n = 0; n < 30000; n++) PINB;
	RES_HIGH();			/* RES# = H */
	for (n = 0; n < 3000; n++)  PINB;

	/* Send initialization parameters */
	p = initdata;
	while ((cl = pgm_read_byte(p++)) != 0) {
		CS_LOW();
		d = pgm_read_byte(p++);
		CMD_WR(d); cl--;
		while (cl--) {
			d = pgm_read_byte(p++);
			DATA_WRB(d);
		}
		CS_HIGH();
	}

	/* Clear screen and Display ON */
	disp_mask(0, DISP_XS - 1, 0, DISP_YS - 1);
	disp_fill(0, DISP_XS - 1, 0, DISP_YS - 1, C_BLACK);
	CS_LOW();
	CMD_WR(0xAF);
	CS_HIGH();

	POWER_HIGH();			/* OLED_POWER = H */

	disp_font_face(Font5x10);	/* Select font */
	disp_font_color(C_WHITE);
}

void disp_putc (
	uint8_t chr		/* Character to be output (kanji chars are given in two disp_putc sequence) */
)
{
	const prog_uint8_t *fnt;
	uint8_t b, d;
	uint16_t dchr;
	uint32_t col;
	int h, wc, w, wb, i, fofs;


	if ((fnt = FontS) == 0) return;	/* Exit if no font registerd */

	if (chr < 0x20) {	/* Processes the control character */
		switch (chr) {
		case '\n':	/* LF */
			LocY += pgm_read_byte(&fnt[15]);
			/* FALLTHROUGH */
		case '\r':	/* CR */
			LocX = 0;
			return;
		case '\b':	/* BS */
			LocX -= pgm_read_byte(&fnt[14]);
			if (LocX < 0) LocX = 0;
			return;
		case '\f':	/* FF */
			disp_fill(0, DISP_XS - 1, 0, DISP_YS - 1, 0);
			LocX = LocY = 0;
			return;
		}
	}

	/* Exit if current position is out of screen */
	if ((unsigned int)LocX >= DISP_XS || (unsigned int)LocY >= DISP_YS) return;

	dchr = chr;
	fofs = 17;		/* Font area start address */

	h = pgm_read_byte(&fnt[15]); w = pgm_read_byte(&fnt[14]); wb = (w + 7) / 8;	/* Font size: height, dot width and byte width */
	fnt += fofs + dchr * wb * h;				/* Goto start of the bitmap */

	if (LocX + w > DISP_XS) w = DISP_XS - LocX;	/* Clip right of font face at right edge */
	if (LocY + h > DISP_YS) h = DISP_YS - LocY;	/* Clip bottom of font face at bottom edge */

	CS_LOW();	/* Select display module */
	disp_setrect(LocX, LocX + w - 1, LocY, LocY + h - 1);
	d = 0;
	do {
		wc = w; b = i = 0;
		do {
			if (!b) {		/* Get next 8 dots */
				b = 0x80;
				d = pgm_read_byte(&fnt[i++]);
			}
			col = ChrColor;
			if (!(b & d)) col >>= 16;	/* Select color, BG or FG */
			b >>= 1;		/* Next bit */
			DATA_WPX(col);	/* Put the color */
		} while (--wc);
		fnt += wb;		/* Next raster */
	} while (--h);
	CS_HIGH();	/* Deselect display module */

	LocX += w;	/* Update current position */
}

void load_bmp (
	const char* fn,		/* File to open */
	void *work,			/* Pointer to the working buffer (must be 4-byte aligned) */
	uint16_t sz_work	/* Size of the working buffer (must be power of 2) */
)
{
	uint32_t n, m, biofs, bm_w, bm_h, iw, w, h, lc, left, top, xs, xe, ye;
	uint16_t bx, d;
	uint8_t *buff = work, *p, k;


	if (pf_open(fn)) return;
	pf_read(buff, 128, &bx);
	if (bx != 128 || memcmp_P(buff, PSTR("BM"), 2)) return;
	biofs = ld_dword(buff+10);			/* bfOffBits */
	if (ld_word(buff+26) != 1) return;	/* biPlanes */
	if (ld_word(buff+28) != 24) return;	/* biBitCount */
	if (ld_dword(buff+30) != 0) return;	/* biCompression */
	bm_w = ld_dword(buff+18);			/* biWidth */
	bm_h = ld_dword(buff+22);			/* biHeight */
	iw = ((bm_w * 3) + 3) & ~3;			/* Bitmap line stride [byte] */
	if (!bm_w || !bm_h) return;			/* Check bitmap size */
	if (iw > sz_work) return;			/* Check if buffer size is sufficient for this file */

	disp_fill(0, DISP_XS, 0, DISP_YS, 0);	/* Clear screen */
	/* Determine left/right of image rectangular */
	if (bm_w > DISP_XS) {
		xs = 0; xe = DISP_XS - 1;	/* Full width */
	} else {
		xs = (DISP_XS - bm_w) / 2;	/* H-centering */
		xe = (DISP_XS - bm_w) / 2 + bm_w - 1;
	}
	/* Determine top/bottom of image rectangular */
	if (bm_h > DISP_YS) {
		ye = DISP_YS - 1;	/* Full height */
	} else {
		ye = (DISP_YS - bm_h) / 2 + bm_h - 1;
	}

	left = top = 0;	/* Offset from left/top of the picture */
	do {
		/* Put a rectangular of the picture */
		m = (bm_h <= DISP_YS) ? biofs : biofs + (bm_h - DISP_YS - top) * iw;
		if (pf_lseek(m) || m != Fs.fptr) break;	/* Goto bottom line of the window */
		w = (bm_w > DISP_XS) ? DISP_XS : bm_w;	/* Rectangular width [pix] */
		h = (bm_h > DISP_YS) ? DISP_YS : bm_h;	/* Rectangular height [pix] */
		m = ye;
		do {
			lc = sz_work / iw;	/* Get some lines fit in the working buffer */
			if (lc > h) lc = h;
			h -= lc;
			pf_read(buff, lc * iw, &bx);
			CS_LOW();
			disp_setrect(xs, xe, m - lc + 1, m);	/* Begin to transfer data to a rectangular area */
			m -= lc;
			do {	/* Line loop */
				lc--; p = &buff[lc * iw + left * 3];
				n = w;
				do {	/* Pixel loop  */
					d = *p++ >> 3;	/* Get an RGB888 pixel, convert to RGB565 format */
					d |= (*p++ >> 2) << 5;
					d |= (*p++ >> 3) << 11;
					DATA_WPX(d);
				} while (--n);
			} while (lc);
			CS_HIGH();
		} while (h);

		k = uart_getc();	/* Get key command */
		while (uart_test()) uart_getc();	/* Flush command queue */
		switch (k) {
		case BTN_RIGHT:	/* Move right */
			if (bm_w > DISP_XS)
				left = (left + MOVE_X + DISP_XS <= bm_w) ? left + MOVE_X : bm_w - DISP_XS;
			break;
		case BTN_LEFT:	/* Move left */
			if (bm_w > DISP_XS)
				left = (left >= MOVE_X) ? left - MOVE_X : 0;
			break;
		case BTN_DOWN:	/* Move down */
			if (bm_h > DISP_YS)
				top = (top + DISP_YS + MOVE_Y <= bm_h) ? top + MOVE_Y : bm_h - DISP_YS;
			break;
		case BTN_UP:	/* Move up */
			if (bm_h > DISP_YS)
				top = (top >= MOVE_Y) ? top - MOVE_Y : 0;
			break;
		default:		/* Exit */
			k = 0;
		}
	} while (k);
}

static unsigned int tjd_input (	/* Returns number of bytes read (zero on error) */
	JDEC* jd,			/* Decompression object */
	uint8_t* buff,		/* Pointer to the read buffer (null to remove data) */
	unsigned int nd		/* Number of bytes to read/skip from input stream */
)
{
	UINT rb;


	jd = jd;	/* Suppress warning (device identifier is not needed in this appication) */

	if (buff) {	/* Read nd bytes from the input strem */
		pf_read(buff, nd, &rb);
		return rb;	/* Returns number of bytes could be read */

	} else {	/* Skip nd bytes on the input stream */
		return (pf_lseek(Fs.fptr + nd) == FR_OK) ? nd : 0;
	}
}

void load_jpg (
	const char* fn,		/* File to open */
	void *work,			/* Pointer to the working buffer (must be 4-byte aligned) */
	uint16_t sz_work	/* Size of the working buffer (must be power of 2) */
)
{
	JDEC jd;		/* Decompression object (70 bytes) */
	JRESULT rc;
	uint8_t scale;


	if (pf_open(fn)) return;

	disp_fill(0, DISP_XS, 0, DISP_YS, 0);	/* Clear screen */
	disp_font_color(C_WHITE);

	/* Prepare to decompress the file */
	rc = jd_prepare(&jd, tjd_input, work, sz_work, 0);
	if (rc == JDR_OK) {

		/* Determine scale factor */
		for (scale = 0; scale < 3; scale++) {
			if ((jd.width >> scale) <= DISP_XS && (jd.height >> scale) <= DISP_YS) break;
		}

		/* Display size information at bottom of screen */
		disp_locate(0, TS_HEIGHT - 1);
		xfprintf(disp_putc, PSTR("%ux%u 1/%u"), jd.width, jd.height, 1 << scale);

		/* Start to decompress the JPEG file */
		rc = jd_decomp(&jd, tjd_output, scale);	/* Start to decompress */

	} else {

		/* Display error code */
		disp_locate(0, 0);
		xfprintf(disp_putc, PSTR("Error: %d"), rc);
	}
	uart_getc();
}
